src/parser/snapshots/codecrafters_interpreter__parser__tests__mix.snap
---
source: src/parser/tests.rs
expression: ast
---
Spanned {
    item: Binary(
        BinaryExpr {
            left: Spanned {
                item: Number(
                    1.0,
                ),
                span: Span {
                    line: 1,
                    start: 0,
                    end: 1,
                },
            },
            op: Add,
            right: Spanned {
                item: Binary(
                    BinaryExpr {
                        left: Spanned {
                            item: Unary(
                                UnaryExpr {
                                    op: Not,
                                    right: Spanned {
                                        item: Bool(
                                            true,
                                        ),
                                        span: Span {
                                            line: 1,
                                            start: 5,
                                            end: 9,
                                        },
                                    },
                                },
                            ),
                            span: Span {
                                line: 1,
                                start: 4,
                                end: 9,
                            },
                        },
                        op: Mul,
                        right: Spanned {
                            item: Group(
                                Spanned {
                                    item: Binary(
                                        BinaryExpr {
                                            left: Spanned {
                                                item: Unary(
                                                    UnaryExpr {
                                                        op: Not,
                                                        right: Spanned {
                                                            item: Unary(
                                                                UnaryExpr {
                                                                    op: Not,
                                                                    right: Spanned {
                                                                        item: Number(
                                                                            3.0,
                                                                        ),
                                                                        span: Span {
                                                                            line: 1,
                                                                            start: 15,
                                                                            end: 16,
                                                                        },
                                                                    },
                                                                },
                                                            ),
                                                            span: Span {
                                                                line: 1,
                                                                start: 14,
                                                                end: 16,
                                                            },
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    line: 1,
                                                    start: 13,
                                                    end: 16,
                                                },
                                            },
                                            op: Add,
                                            right: Spanned {
                                                item: Unary(
                                                    UnaryExpr {
                                                        op: Neg,
                                                        right: Spanned {
                                                            item: Number(
                                                                5.0,
                                                            ),
                                                            span: Span {
                                                                line: 1,
                                                                start: 20,
                                                                end: 21,
                                                            },
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    line: 1,
                                                    start: 19,
                                                    end: 21,
                                                },
                                            },
                                        },
                                    ),
                                    span: Span {
                                        line: 1,
                                        start: 13,
                                        end: 21,
                                    },
                                },
                            ),
                            span: Span {
                                line: 1,
                                start: 12,
                                end: 22,
                            },
                        },
                    },
                ),
                span: Span {
                    line: 1,
                    start: 4,
                    end: 22,
                },
            },
        },
    ),
    span: Span {
        line: 1,
        start: 0,
        end: 22,
    },
}
